--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="logo" style="z-index: 20001">
-        <a href="#"><img src="res/img/logo-mehdi.png" alt=""/></a>
+        <a href="#"><img src="./res/img/logo-mehdi.png" alt=""/></a>
       </div>
       <div class="header__nav container">
         <div class="nav__links">
