--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       Pace.on("done", function() {
         $("#preloader")
           .delay(300)
-          .animate({ top: "-100%", opacity: "70%" }, 1000);
+          .animate({ top: "-140%", opacity: "70%" }, 1500);
         $(".logo").addClass("test");
         $(".header__content h1, .header__buttons").addClass("fadeInDown");
         setTimeout(function() {
@@ -90,7 +90,7 @@
             <div class="header__button"><a href="#">Train Online</a></div>
           </div>
         </div>
-        <video loop src="res/img/andrei.mp4" autoplay="true" muted="muted"></video>
+        <video loop src="res/img/andrei.mp4" autoplay="true" muted="muted" muted></video>
       </div>
       <div class="header__overlay"></div>
     </header>
