--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="header__nav container">
         <div class="nav__links">
           <a href="#ubermich">Über Mich</a>
-          <a href="#">Competition</a>
+          <a href="#timeline">Competition</a>
           <a href="#packages">Packages</a>
         </div>
         <div class="nav__links nav__links--social">
