--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <i class="menu-background"></i>
         </div>
       </div>
-      <div class="logo" style="z-index: 20001">
+      <div class="logo">
         <a href="#"><img src="res/img/logo-mehdi.png" alt=""/></a>
       </div>
       <div class="header__nav container">
@@ -90,7 +90,7 @@
             <div class="header__button"><a href="#">Train Online</a></div>
           </div>
         </div>
-        <video loop src="res/img/andrei.mp4" autoplay="true" muted="muted" muted></video>
+        <video loop src="res/img/video-mehdi.mp4" autoplay="true" muted="muted" muted></video>
       </div>
       <div class="header__overlay"></div>
     </header>
