--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="header__button"><a href="#">Train Online</a></div>
           </div>
         </div>
-        <video loop autoplay="true" muted="muted" muted poster="res/img/poster.jpg">
+        <video playsInline loop autoplay="true" muted="muted" muted poster="res/img/poster.jpg">
 			  <source src="res/img/video-mehdi.mp4" type="video/mp4">
 		  </video>
       </div>
