--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- UI JS file -->
     <script src="res/js/photoswipe-ui-default.min.js"></script>
+	 <script src="res/js/object-fit-videos.js"></script>
   </head>
 
   <body>
@@ -950,6 +951,8 @@
 			  document.querySelector(".backtotop").classList.remove("active-top");
 		  }
       };
+
+		objectFitVideos();
     </script>
     <script>
       $(function() {
