--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <span>TRAIN WITH ME</span>
           </h1>
           <div class="header__buttons">
-            <div class="header__button"><a href="https://google.com">Train 1 to 1</a></div>
-            <div class="header__button"><a href="#">Train Online</a></div>
+            <div class="button button--header"><a href="https://google.com">Train 1 to 1</a></div>
+            <div class="button button--header"><a href="#">Train Online</a></div>
           </div>
         </div>
         <video playsInline loop autoplay="true" muted="muted" muted poster="res/img/poster.jpg">
@@ -852,7 +852,7 @@
           </div>
         </div>
 
-        <div id="loadMore" class="header__button">
+        <div id="loadMore" class="button">
           <a href="#">Load More</a>
         </div>
       </section>
@@ -888,7 +888,7 @@
                 </div>
               </div>
               <div class="contact__submit">
-                <div class="header__button"><a href="#">Send</a></div>
+                <div class="button"><a href="#">Send</a></div>
               </div>
             </form>
           </div>
