--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
             <div class="button button--header"><a href="#">Train Online</a></div>
           </div>
         </div>
-        <video playsInline loop autoplay="true" muted="muted" muted poster="res/img/poster.jpg">
-			  <source src="res/img/video-mehdi.mp4" type="video/mp4">
+        <video playsInline loop autoplay="true" muted="muted" muted poster="res/img/poster.jpg" preload>
+			  <source src="res/img/video-mehdi.mp4" type="video/mp4" media="only screen and (min-device-width: 768px)"></source>
+			  <source src="res/img/video-mehdi-mobile.mp4" type="video/mp4" media="only screen and (max-device-width: 768px)"></source>
 		  </video>
+
+
       </div>
       <div class="header__overlay"></div>
     </header>
@@ -913,6 +916,10 @@
 	 </div>
 
 	 <script>
+
+
+
+
 
 
 	 var links = document.querySelectorAll('a[href^="#"]');
