--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section id="packages" class="pakette container">
         <h2 class="pakette__headline">Choose Your Journey</h2>
         <div class="pakette__wrapper">
-          <div class="pakette__item">
+          <div class="pakette__item anim">
             <h2>Fat Loss Program</h2>
             <p class="pakette__price"><i class="fas fa-euro-sign"></i>100<span>/mo</span></p>
             <ul>
@@ -119,7 +119,7 @@
               <a href="#">Buy</a>
             </div>
           </div>
-          <div class="pakette__item">
+          <div class="pakette__item anim">
             <div class="pakette__hot"><i class="fab fa-hotjar"></i>HOT</div>
             <h2>Bulk Program</h2>
             <p class="pakette__price"><i class="fas fa-euro-sign"></i>100<span>/mo</span></p>
@@ -133,7 +133,7 @@
               <a href="#">Buy</a>
             </div>
           </div>
-          <div class="pakette__item">
+          <div class="pakette__item anim">
             <h2>Prep Program</h2>
             <p class="pakette__price"><i class="fas fa-euro-sign"></i>100<span>/mo</span></p>
             <ul>
@@ -148,7 +148,7 @@
           </div>
         </div>
       </section>
-      <section id="ubermich" class="twocolumns container container--nopadding">
+      <section id="ubermich" class="twocolumns container container--nopadding anim">
         <div class="twocolumns__wrapper">
           <div class="twocolumns__item twocolumns__item">
             <h2>Über mich</h2>
@@ -168,7 +168,7 @@
         <div class="timeline__wrapper">
           <div class="timeline__item">
             <div class="timeline__img"></div>
-            <div class="timeline__content">
+            <div class="timeline__content anim">
               <h2>Title</h2>
               <div class="timeline__date">
                 1 MAY 2010
@@ -182,7 +182,7 @@
           </div>
           <div class="timeline__item timeline__item--right">
             <div class="timeline__img"></div>
-            <div class="timeline__content timeline__content--right">
+            <div class="timeline__content timeline__content--right anim">
               <h2>Title</h2>
               <div class="timeline__date timeline__date--right">
                 1 MAY 2010
@@ -196,7 +196,7 @@
           </div>
           <div class="timeline__item">
             <div class="timeline__img"></div>
-            <div class="timeline__content">
+            <div class="timeline__content anim">
               <h2>Title</h2>
               <div class="timeline__date">
                 1 MAY 2010
@@ -210,7 +210,7 @@
           </div>
           <div class="timeline__item timeline__item--right">
             <div class="timeline__img"></div>
-            <div class="timeline__content timeline__content--right">
+            <div class="timeline__content timeline__content--right anim">
               <h2>Title</h2>
               <div class="timeline__date timeline__date--right">
                 1 MAY 2010
@@ -919,9 +919,27 @@
 		 <a href="#top"><i class="fas fa-arrow-up"></i></a>
 	 </div>
 
+
 	 <script>
 
+	 var images = document.querySelectorAll('.anim');
+	 var options = {
+		 threshold: 0.5
+	 }
 
+	 observer = new IntersectionObserver(function(entries, options){
+		 entries.forEach(function(entry){
+			 if(entry.intersectionRatio > 0){
+				 entry.target.style.animation = "test 1s forwards ease-out";
+			 } else{
+				 entry.target.style.animation = "none";
+			 }
+		 });
+	 });
+
+	 images.forEach(function(image){
+		  observer.observe(image);
+	 });
 
 
 
