--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="https://kit.fontawesome.com/226a54ec5e.js" crossorigin="anonymous"></script>
 
+	 <script src="res/js/intersection-observer.js"></script>
     <script src="res/js/pace.js"></script>
     <script src="res/js/swiper.min.js"></script>
     <!-- Core CSS file -->
@@ -22,6 +23,7 @@
 
     <link rel="stylesheet" href="res/default-skin/default-skin.css" />
     <link rel="stylesheet" href="res/css/swiper.min.css" />
+
 
     <!-- Core JS file -->
     <script src="res/js/photoswipe.min.js"></script>
